[project]
name = "moneyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.0.40",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.11.7",
    "langchain-openai>=0.3.32",
    "langchain-core>=0.3.74",
    "pipreqs>=0.5.0",
]

[tools.poetry]
package-mode = false
